@@ -2,6 +2,9 @@
 
         * 3.3_dev300_m89-1:
 	- new snapshot
+	- disable-gio because of http://www.openoffice.org/issues/show_bug.cgi?id=114970
+	- add a buildfix to compile with recent redland/rasqal
+	- make it work with python2=2.7
 
 2010-10-01 Andreas Radke <andyrtr at archlinux.org>
 
